[package]
name = "yaml-peg"
description = "A YAML 1.2 parser using greedy parsing algorithm with PEG atoms."
version = "0.12.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/KmolYuan/yaml-peg-rs"
readme = "README.md"
keywords = ["yaml", "parser"]

[dependencies]
ritelinked = "0.3"
