[package]
name = "yaml-peg"
description = "A YAML 1.2 parser using greedy parsing algorithm with PEG atoms."
version = "0.22.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/KmolYuan/yaml-peg-rs"
readme = "README.md"
keywords = ["yaml", "parser"]
categories = ["parser-implementations", "no-std"]

[features]
serde-std = ["serde/std"]

[dependencies]
ritelinked = "0.3"
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
