[package]
name = "yaml-peg"
description = "A YAML 1.2 parser using a greedy parsing algorithm with PEG atoms."
version = "1.0.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/KmolYuan/yaml-peg-rs"
readme = "README.md"
keywords = ["yaml", "parser"]
categories = ["parser-implementations", "no-std"]

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:serde"]

[dependencies]
ritelinked = "0.3"
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1", default-features = false, features = ["alloc"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
